# web-browser

./: .gitmodules  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yaml  litellm_config.yaml
litellm/: litellm_config.yaml  litellm_config_w_logging.yaml
scripts/: auto_generate_openapi_spec.py
server/: Cargo.toml
server/src/: agent_search.rs  llm.rs  main.rs  prompts.rs  query.rs  result_format.rs  scrape_site.rs  search.rs  server.rs  utils.rs  webpage_parse.rs
server/src/agent_search/: human.rs  multi_query_parallel_tree.rs  parallel.rs  parallel_tree.rs  sequential.rs  utils.rs
server/src/handlers/: agent_search.rs  mod.rs  scrape_site.rs  search.rs
server/src/handlers/v1/: agent_search.rs  mod.rs  scrape_site.rs  search.rs
server/src/llm/: anthropic.rs  custom.rs  fireworks.rs  gemini.rs  mod.rs  openai.rs
