[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
rocket = { version = "0.5.1", features = ["json"] }
clap = { version = "4.5.23", features = ["derive"] }
thiserror = "2.0.7"
regex = "1.11.1"
scraper = "0.22.0"
fancy-regex = "0.14.0"
ammonia = "4"
maplit = "1.0.2"
futures = "0.3.31"
futures-executor = "0.3"